docs/api/qiskit-ibm-runtime/0.49/fake-provider-fake-miami.mdx
---
title: FakeMiami (v0.49)
description: API reference for qiskit_ibm_runtime.fake_provider.FakeMiami in qiskit-ibm-runtime v0.49
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.fake_provider.FakeMiami
---

# FakeMiami

<Class id="qiskit_ibm_runtime.fake_provider.FakeMiami" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/fake_provider/backends/miami/fake_miami.py#L20-L27" signature="FakeMiami" modifiers="class">
  Bases: `FakeBackendV2`

  A fake 120 qubit backend.

  Initialize a BackendV2 based backend

  **Parameters**

  *   **provider** – An optional backwards reference to the provider object that the backend is from
  *   **name** – An optional name for the backend
  *   **description** – An optional description of the backend
  *   **online\_date** – An optional datetime the backend was brought online
  *   **backend\_version** – An optional backend version string. This differs from the [`version`](/docs/api/qiskit/qiskit.providers.BackendV2#version) attribute as [`version`](/docs/api/qiskit/qiskit.providers.BackendV2#version) is for the abstract `Backend` abstract interface version of the object while `backend_version` is for versioning the backend itself.
  *   **fields** – kwargs for the values to use to override the default options.

  **Raises**

  **AttributeError** – If a field is specified that’s outside the backend’s options

  ## Attributes

  ### backend\_name

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.backend_name">
    Type: `str`

    Default value: `'fake_miami'`

    Name of the backend.
  </Attribute>

  ### conf\_filename

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.conf_filename">
    Type: `str`

    Default value: `'conf_miami.json'`

    Filename for the backend configuration.
  </Attribute>

  ### coupling\_map

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.coupling_map">
    Return the [`CouplingMap`](/docs/api/qiskit/qiskit.transpiler.CouplingMap) object
  </Attribute>

  ### dirname

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.dirname">
    Type: `str`

    Default value: `'/home/runner/work/qiskit-ibm-runtime/qiskit-ibm-runtime/qiskit_ibm_runtime/fake_provider/backends/miami'`

    Directory for the real backend snapshots.
  </Attribute>

  ### dt

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.dt">
    Return the system time resolution of input signals

    This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The input signal timestep in seconds. If the backend doesn’t define `dt`, `None` will be returned.
  </Attribute>

  ### dtm

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.dtm">
    Return the system time resolution of output signals.

    **Returns**

    The output signal timestep in seconds.
  </Attribute>

  ### instruction\_durations

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.instruction_durations">
    Return the [`InstructionDurations`](/docs/api/qiskit/qiskit.transpiler.InstructionDurations) object.
  </Attribute>

  ### instructions

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.instructions">
    A list of Instruction tuples on the backend of the form `(instruction, (qubits))`
  </Attribute>

  ### max\_circuits

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.max_circuits">
    Return the maximum number of circuits that can be run in a single job.

    This property used to return the max\_experiments value from the backend configuration but this value is no longer an accurate representation of backend circuit limits. New fields will be added to indicate new limits.
  </Attribute>

  ### meas\_map

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.meas_map">
    Return the grouping of measurements which are multiplexed

    This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The grouping of measurements which are multiplexed

    **Raises**

    **NotImplementedError** – if the backend doesn’t support querying the measurement mapping
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.num_qubits">
    Return the number of qubits the backend has.
  </Attribute>

  ### operation\_names

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.operation_names">
    A list of instruction names that the backend supports.
  </Attribute>

  ### operations

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.operations">
    A list of [`Instruction`](/docs/api/qiskit/qiskit.circuit.Instruction) instances that the backend supports.
  </Attribute>

  ### options

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](#qiskit_ibm_runtime.fake_provider.FakeMiami.run "qiskit_ibm_runtime.fake_provider.FakeMiami.run") method.
  </Attribute>

  ### physical\_qubits

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.physical_qubits">
    Return the number of physical qubits the backend has.

    Return the number of physical qubits for the backend (programmable qubits, reset qubits, and couplers combined).
  </Attribute>

  ### props\_filename

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.props_filename">
    Type: `str`

    Default value: `'props_miami.json'`

    Filename for the backend properties.
  </Attribute>

  ### provider

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.provider">
    Return the backend provider.

    **Returns**

    the provider responsible for the backend.

    **Return type**

    provider
  </Attribute>

  ### target

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.target">
    A [`qiskit.transpiler.Target`](/docs/api/qiskit/qiskit.transpiler.Target) object for the backend.

    **Return type**

    Target
  </Attribute>

  ### version

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.version">
    Default value: `2`
  </Attribute>

  ### name

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.name">
    Name of the backend.
  </Attribute>

  ### description

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.description">
    Optional human-readable description.
  </Attribute>

  ### online\_date

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.online_date">
    Date that the backend came online.
  </Attribute>

  ### backend\_version

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeMiami.backend_version">
    Version of the backend being provided. This is not the same as `BackendV2.version`, which is the version of the `Backend` abstract interface.
  </Attribute>

  ## Methods

  ### check\_faulty

  <Function id="qiskit_ibm_runtime.fake_provider.FakeMiami.check_faulty" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/fake_provider/fake_backend.py#L177-L209" signature="check_faulty(circuit)">
    Check if the input circuit uses faulty qubits or edges.

    **Parameters**

    **circuit** (*QuantumCircuit*) – Circuit to check.

    **Raises**

    **ValueError** – If an instruction operating on a faulty qubit or edge is found.

    **Return type**

    None
  </Function>

  ### configuration

  <Function id="qiskit_ibm_runtime.fake_provider.FakeMiami.configuration" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/fake_provider/fake_backend.py#L173-L175" signature="configuration()">
    Return the backend configuration.

    **Return type**

    [QasmBackendConfiguration](models-qasm-backend-configuration "qiskit_ibm_runtime.models.QasmBackendConfiguration")
  </Function>

  ### properties

  <Function id="qiskit_ibm_runtime.fake_provider.FakeMiami.properties" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/fake_provider/fake_backend.py#L160-L171" signature="properties(refresh=False)">
    Return the backend properties.

    **Parameters**

    **refresh** (*bool*) – If `True`, re-retrieve the backend properties from the local file.

    **Returns**

    The backend properties.

    **Return type**

    [*BackendProperties*](models-backend-properties "qiskit_ibm_runtime.models.backend_properties.BackendProperties")
  </Function>

  ### qubit\_properties

  <Function id="qiskit_ibm_runtime.fake_provider.FakeMiami.qubit_properties" signature="qubit_properties(qubit)">
    Return QubitProperties for a given qubit.

    If there are no defined or the backend doesn’t support querying these details this method does not need to be implemented.

    **Parameters**

    **qubit** (*int | list\[int]*) – The qubit to get the `QubitProperties` object for. This can be a single integer for 1 qubit or a list of qubits and a list of `QubitProperties` objects will be returned in the same order

    **Returns**

    The `QubitProperties` object for the specified qubit. If a list of qubits is provided a list will be returned. If properties are missing for a qubit this can be `None`.

    **Raises**

    **NotImplementedError** – if the backend doesn’t support querying the qubit properties

    **Return type**

    [*QubitProperties*](/docs/api/qiskit/qiskit.providers.QubitProperties) | list\[[*QubitProperties*](/docs/api/qiskit/qiskit.providers.QubitProperties)]
  </Function>

  ### refresh

  <Function id="qiskit_ibm_runtime.fake_provider.FakeMiami.refresh" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/fake_provider/fake_backend.py#L400-L505" signature="refresh(service, use_fractional_gates=False, persist=True)">
    Update the data files from its real counterpart.

    This method pulls the latest backend data files from their real counterpart and, by default (`persist=True`), overwrites the corresponding files in the local installation:

    *   `../fake_provider/backends/{backend_name}/conf_{backend_name}.json`
    *   `../fake_provider/backends/{backend_name}/props_{backend_name}.json`

    The new data files will persist through sessions so the files will stay updated unless they are manually reverted locally or when `qiskit-ibm-runtime` is upgraded or reinstalled.

    Overwriting the installed data files fails, however, when the package is installed in a read-only location (e.g. a system-wide `site-packages` directory). In that case, or whenever modifying the installed package is undesirable, pass `persist=False` to write the refreshed data to a temporary directory instead. The backend is still updated for the current session, but the changes are not persisted to disk and are lost once the backend is garbage collected or the process exits.

    **Parameters**

    *   **service** ([*QiskitRuntimeService*](qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService")) – A `QiskitRuntimeService` instance
    *   **use\_fractional\_gates** (*bool*) – Set True to allow for the backends to include fractional gates.
    *   **persist** (*bool*) – If `True` (default), the refreshed data files overwrite the copies bundled with the installed package so the update persists across sessions. If `False`, the data is written to a temporary directory instead, which allows [`refresh()`](#qiskit_ibm_runtime.fake_provider.FakeMiami.refresh "qiskit_ibm_runtime.fake_provider.FakeMiami.refresh") to succeed even when the package is installed in a read-only location, at the cost of the update not persisting between sessions.

    **Raises**

    *   **ValueError** – if the provided service is a non-QiskitRuntimeService instance.
    *   **Exception** – If the real target doesn’t exist or can’t be accessed

    **Return type**

    None
  </Function>

  ### run

  <Function id="qiskit_ibm_runtime.fake_provider.FakeMiami.run" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/fake_provider/fake_backend.py#L289-L318" signature="run(run_input, **options)">
    Run on the fake backend using a simulator.

    This method runs circuit jobs (an individual or a list of QuantumCircuit) using BasicSimulator or Aer simulator and returns a [`Job`](/docs/api/qiskit/qiskit.providers.Job) object.

    If qiskit-aer is installed, jobs will be run using AerSimulator with noise model of the fake backend. Otherwise, jobs will be run using BasicSimulator without noise.

    Currently noisy simulation of a pulse job is not supported yet in FakeBackendV2.

    **Parameters**

    *   **run\_input** (*QuantumCircuit | list\[QuantumCircuit]*) – An individual or a list of [`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit)
    *   **options** (*dict*) – Any kwarg options to pass to the backend for running the config. If a key is also present in the options attribute/object then the expectation is that the value specified will be used instead of what’s set in the options object.

    **Returns**

    The job object for the run

    **Return type**

    Job
  </Function>

  ### set\_options

  <Function id="qiskit_ibm_runtime.fake_provider.FakeMiami.set_options" signature="set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    **AttributeError** – If the field passed in is not part of the options
  </Function>

  ### status

  <Function id="qiskit_ibm_runtime.fake_provider.FakeMiami.status" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/fake_provider/fake_backend.py#L143-L158" signature="status()">
    Return the backend status.

    **Returns**

    The status of the backend.

    **Return type**

    [*BackendStatus*](models-backend-status "qiskit_ibm_runtime.models.backend_status.BackendStatus")
  </Function>
</Class>

